; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/fslib/vfatlib/check/extr_boot.c_write_label.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/fslib/vfatlib/check/extr_boot.c_write_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_label(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @strlen(i8* %6)
  store i32 %7, i32* %5, align 4
  br label %8

8:                                                ; preds = %11, %2
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 11
  br i1 %10, label %11, label %17

11:                                               ; preds = %8
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %5, align 4
  %15 = sext i32 %13 to i64
  %16 = getelementptr inbounds i8, i8* %12, i64 %15
  store i8 32, i8* %16, align 1
  br label %8

17:                                               ; preds = %8
  %18 = load i32*, i32** %3, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @write_boot_label(i32* %18, i8* %19)
  %21 = load i32*, i32** %3, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @write_volume_label(i32* %21, i8* %22)
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @write_boot_label(i32*, i8*) #1

declare dso_local i32 @write_volume_label(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
